--- a/assets/app.css
+++ b/assets/app.css
@@ -36,7 +36,7 @@ ol {
 
 .rich-text__text {
   --tw-text-opacity: 1;
-  color: rgb(35 31 32 / var(--tw-text-opacity));
+  color: rgb(35 31 32 / var(--tw-text-opacity, 1));
 }
 
 svg.icon.icon-arrow path {
@@ -52,13 +52,13 @@ svg.icon.icon-arrow path {
 a.mega-menu__link.mega-menu__link--level-2 {
   font-weight: 700 !important;
   --tw-text-opacity: 1;
-  color: rgb(35 31 32 / var(--tw-text-opacity));
+  color: rgb(35 31 32 / var(--tw-text-opacity, 1));
   font-size: 1.8rem !important;
 }
 
 .menu-link__with-image span.caption {
   --tw-text-opacity: 1;
-  color: rgb(35 31 32 / var(--tw-text-opacity));
+  color: rgb(35 31 32 / var(--tw-text-opacity, 1));
 }
 
 li.menu-link__with-image {
@@ -124,7 +124,7 @@ form#bh-sl-user-location button#scapl-geocode-btn {
   border-width: 2px;
   border-style: solid;
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
   color: #0d374b;
   background-color: transparent !important;
   border-color: #231f20;
@@ -227,7 +227,7 @@ form#bh-sl-user-location .scasl-search-btn {
   padding-top: 1rem !important;
   font-weight: 700 !important;
   --tw-text-opacity: 1 !important;
-  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1)) !important;
 }
 
 .jdgm-carousel-item__review-body,
@@ -248,7 +248,7 @@ form#bh-sl-user-location .scasl-search-btn {
 
 .jdgm-carousel-item__reviewer-name.jdgm-ellipsis {
   --tw-text-opacity: 1 !important;
-  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1)) !important;
   font-weight: 700 !important;
 }
 
@@ -271,7 +271,7 @@ form#bh-sl-user-location .scasl-search-btn {
 .footer-block.grid__item a,
 .footer__copyright {
   --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
   opacity: 1 !important;
 }
 
@@ -298,7 +298,7 @@ form#bh-sl-user-location .scasl-search-btn {
 
 .toggle-menu svg {
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
 .footer-block.grid__item {
@@ -333,7 +333,7 @@ form#bh-sl-user-location .scasl-search-btn {
 @media (min-width: 750px) {
   .footer__content-bottom {
     --tw-border-opacity: 1 !important;
-    border-color: rgb(255 255 255 / var(--tw-border-opacity)) !important;
+    border-color: rgb(255 255 255 / var(--tw-border-opacity, 1)) !important;
   }
 }
 
@@ -397,7 +397,7 @@ form#bh-sl-user-location .scasl-search-btn {
 .slider-buttons button.slider-button {
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(208 222 229 / var(--tw-bg-opacity));
+  background-color: rgb(208 222 229 / var(--tw-bg-opacity, 1));
   padding: 1rem;
 }
 
@@ -414,20 +414,20 @@ form#bh-sl-user-location .scasl-search-btn {
   border-width: 1px;
   border-style: solid;
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
   padding: 1rem;
 }
 
 a.pagination__item-arrow {
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(208 222 229 / var(--tw-bg-opacity));
+  background-color: rgb(208 222 229 / var(--tw-bg-opacity, 1));
   padding: 1rem;
 }
 
 .pagination__item--current {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(142 194 201 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(142 194 201 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .pagination__item--current::after {
@@ -515,7 +515,7 @@ a.pagination__item-arrow {
   height: 100%;
   flex-direction: column;
   --tw-text-opacity: 1;
-  color: rgb(35 31 32 / var(--tw-text-opacity));
+  color: rgb(35 31 32 / var(--tw-text-opacity, 1));
 }
 
 .ingredient-card__top {
@@ -585,7 +585,7 @@ ul.collection-list .card__content {
   ul,
   ol {
     --tw-text-opacity: 1;
-    color: rgb(0 0 0 / var(--tw-text-opacity));
+    color: rgb(0 0 0 / var(--tw-text-opacity, 1));
   }
   blockquote,
   .embed-container {
@@ -628,7 +628,7 @@ ul.collection-list .card__content {
 .h4.accordion__title,
 .accordion__content {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
   padding: 0px !important;
 }
 
@@ -704,7 +704,7 @@ ul.collection-list .card__content {
 .product-form__input--pill--shade input[type='radio']:checked + label {
   background-color: transparent !important;
   --tw-text-opacity: 1 !important;
-  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1)) !important;
 }
 
 .product-form__input--pill--shade input[type='radio'] + label {
@@ -724,7 +724,7 @@ ul.collection-list .card__content {
   span.cl-swatch {
   border-width: 2px;
   --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
 span.cl-swatch {
@@ -736,7 +736,7 @@ span.cl-swatch {
 
 .collection-hero__description {
   --tw-text-opacity: 1;
-  color: rgb(35 31 32 / var(--tw-text-opacity));
+  color: rgb(35 31 32 / var(--tw-text-opacity, 1));
 }
 
 /** Newsletter **/
@@ -779,13 +779,13 @@ span.cl-swatch {
 
 .newsletter-form__field-wrapper .field__input {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .newsletter-form__field-wrapper .button {
   width: 100% !important;
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .newsletter__wrapper > * + * {
@@ -796,7 +796,7 @@ span.cl-swatch {
   margin-bottom: 0.25rem;
   font-weight: 700;
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 /** Custom Collage **/
@@ -850,7 +850,7 @@ span.cl-swatch {
   border-width: 2px !important;
   border-style: solid !important;
   --tw-border-opacity: 1 !important;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity)) !important;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1)) !important;
   background-color: transparent !important;
 }
 
@@ -993,7 +993,7 @@ span.cl-swatch {
   --tw-contain-style:  ;
 }
 
-/*! tailwindcss v3.4.14 | MIT License | https://tailwindcss.com*/
+/*! tailwindcss v3.4.15 | MIT License | https://tailwindcss.com*/
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -1561,17 +1561,17 @@ ul,
 
 .twcss-border-gray-300 {
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
 .twcss-bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .twcss-bg-gray-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
 .twcss-p-0 {
@@ -1646,12 +1646,12 @@ ul,
 
 .twcss-text-\[\#666\] {
   --tw-text-opacity: 1;
-  color: rgb(102 102 102 / var(--tw-text-opacity));
+  color: rgb(102 102 102 / var(--tw-text-opacity, 1));
 }
 
 .twcss-text-black {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 .twcss-antialiased {
