--- a/assets/custom-tailwind.css
+++ b/assets/custom-tailwind.css
@@ -653,7 +653,12 @@ span.cl-swatch {
 .globo-form-control label {
   @apply twcss-text-2xl !important;
 }
-
+.globo-form-control .gfb__rating-stars fieldset label {
+  max-width: 60px;
+}
+.globo-form-control .gfb__rating-stars fieldset {
+  justify-content: center !important;
+}
 
 /** Makes sure that collections with 4 or less are centralised. **/
 @media screen and (min-width: 750px) {
